tests/idris2/perror007/expected
1/1: Building StrError1 (StrError1.idr)
Error: Expected 'case', 'if', 'do', application or operator expression.

StrError1.idr:2:24--2:25
 1 | foo : String
 2 | foo = "empty interp: \{}"
                            ^

1/1: Building StrError2 (StrError2.idr)
Error: Expected 'case', 'if', 'do', application or operator expression.

StrError2.idr:2:19--2:20
 1 | foo : String
 2 | foo = "nested: \{ " \{ 1 +  } " }"
                       ^

1/1: Building StrError3 (StrError3.idr)
Error: Expected 'case', 'if', 'do', application or operator expression.

StrError3.idr:2:7--2:8
 1 | foo : String
 2 | foo = "incomplete: \{ a <+> }"
           ^

1/1: Building StrError4 (StrError4.idr)
Error: While processing multiline string. Expected line wrap.

StrError4.idr:2:7--2:13
 1 | foo : String
 2 | foo = """"""
           ^^^^^^

1/1: Building StrError5 (StrError5.idr)
Error: While processing multiline string. Indentation not enough.

StrError5.idr:2:10--4:5
 2 | foo = """
 3 |    a
 4 |     """

1/1: Building StrError6 (StrError6.idr)
Error: While processing multiline string. Unexpected character in the first line.

StrError6.idr:2:10--3:1
 2 | foo = """a
 3 | """

1/1: Building StrError7 (StrError7.idr)
Error: While processing multiline string. Unexpected character in the first line.

StrError7.idr:2:10--2:11
 1 | foo : String
 2 | foo = """a"""
              ^

1/1: Building StrError8 (StrError8.idr)
Error: While processing multiline string. Unexpected interpolation in the first line.

StrError8.idr:2:10--2:20
 1 | foo : String
 2 | foo = """\{"hello"}
              ^^^^^^^^^^

1/1: Building StrError9 (StrError9.idr)
Error: While processing multiline string. Unexpected interpolation in the last line.

StrError9.idr:3:1--3:11
 1 | foo : String
 2 | foo = """
 3 | \{"hello"}"""
     ^^^^^^^^^^

1/1: Building StrError10 (StrError10.idr)
Error: While processing multiline string. Unexpected character in the last line.

StrError10.idr:2:10--3:2
 2 | foo = """
 3 | a"""

